tests/baselines/reference/jsFileCompilationBindDuplicateIdentifier.errors.txt
tests/cases/compiler/a.js(1,5): error TS2300: Duplicate identifier 'a'.
tests/cases/compiler/a.js(2,7): error TS2300: Duplicate identifier 'a'.


==== tests/cases/compiler/a.js (2 errors) ====
    var a = 10;
        ~
!!! error TS2300: Duplicate identifier 'a'.
    class a {
          ~
!!! error TS2300: Duplicate identifier 'a'.
    }